--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  lint-and-typecheck:
-    name: Lint and Typecheck
+  build-and-test:
+    name: Build and Test
     runs-on: ubuntu-latest
+    
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [18.x]  # Usando apenas Node.js LTS mais recente
 
     steps:
       - name: Checkout repository
@@ -26,9 +27,22 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Run ESLint
         run: npm run lint
-
-      - name: Run TypeScript typecheck
+        
+      - name: Check Types
         run: npm run typecheck
+        
+      - name: Build
+        run: npm run build
+        
+      - name: Cache build artifacts
+        uses: actions/cache@v3
+        with:
+          path: |
+            dist
+            .vite
+          key: ${{ runner.os }}-build-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-
