--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "npm run lint && npm run typecheck"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.58.0",
