--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://meuphilim.github.io/Agenda-Transfer/",
+  "homepage": "https://ecoexpedicoes.vercel.app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
