--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "agenda-transfer",
+  "name": "vite-react-typescript-starter",
   "private": true,
-  "version": "1.0.0",
-  "homepage": "https://meuphilim.github.io/Agenda-Transfer/",
+  "version": "0.0.0",
   "type": "module",
+  "homepage": "https://ecoexpedicoes.vercel.app/",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "build:analyze": "tsc && vite build --mode analyze",
+    "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
     "typecheck": "tsc --noEmit -p tsconfig.app.json",
-    "check": "npm run lint && npm run typecheck",
-    "build:verbose": "vite build --debug"
+    "check": "npm run lint && npm run typecheck"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -41,10 +38,8 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "terser": "^5.31.6",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^6.3.6",
-    "vite-plugin-compression": "^0.5.1"
+    "vite": "^6.3.6"
   }
 }
