--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "agenda-transfer",
+  "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "",
+  "homepage": "https://ecoexpedicoes.vercel.app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.58.0",
     "date-fns": "^4.1.0",
